crates/ffi/include/pure_study.h

// How many verse references an occurrence list returns before it is capped
// (`total` in the JSON stays honest above this).
#define OCCURRENCE_CAP 500
// The loaded, immutable study core: corpus + Strong's dictionary + the search
// and occurrence indices every lookup rides on. Opaque to C; construct with
// [`pure_engine_open`] / [`pure_engine_open_from_bytes`], release with
// [`pure_engine_free`].
typedef struct PureEngine PureEngine;
// The rendering lens for a Strong's code: every distinct English rendering of
// it, most frequent first, each with an occurrence count and its (capped)
// verse refs + token spans. `{"code","renderings":[{"rendering","total",
// "capped","refs":[{"verse","display","span":[start,end]}]}]}`. Each `refs`
// list is capped at [`OCCURRENCE_CAP`]; `renderings` is empty for an untagged
// or unknown code. Null only on a null engine. Caller-freed.
//
// # Safety
// `engine` is valid; `code` is a valid NUL-terminated UTF-8 string.
char *pure_engine_renderings_json(const struct PureEngine *engine, const char *code);
// The reverse lens: the Strong's codes a surface English word translates,
// most frequent first. `{"word","codes":[{"code","count"}]}`. Reveals where
// one English word hides a Greek/Hebrew distinction ("love" ← agape and
// phileo); `codes` is empty for an untagged word. Null only on a null engine.
// Caller-freed.
//
// # Safety
// `engine` is valid; `word` is a valid NUL-terminated UTF-8 string.
char *pure_engine_word_codes_json(const struct PureEngine *engine, const char *word);
// Run a query through the multi-tier search and return a `SearchAnswer` JSON:
// either `{"kind":"goto",...}` (the query was a reference) or
// `{"kind":"hits","how","total","capped","hits":[...]}`. Null when the query is
// blank or the engine is null. Caller-freed.
//
// # Safety
// `engine` is valid; `query` is a valid NUL-terminated UTF-8 string.
char *pure_engine_search_json(const struct PureEngine *engine, const char *query);
// The loaded threads as JSON: `{"threads":[{name,notes,created,entries:[…]}]}`.
// Caller-freed; null on a null engine.
//
// # Safety
// `engine` is a valid engine pointer.
char *pure_engine_threads_json(const struct PureEngine *engine);
// The loaded tags as JSON: `{"tags":[{name,color,created,members:[…]}]}`.
// Caller-freed; null on a null engine.
//
// # Safety
// `engine` is a valid engine pointer.
char *pure_engine_tags_json(const struct PureEngine *engine);
// A verse's weave cross-reference partners as JSON:
// `{"verse","partners":[{"verse","display","weave"}]}`. Caller-freed; null on a
// null engine or an unparseable reference.
//
// # Safety
// `engine` is valid; `ref_key` is a valid NUL-terminated UTF-8 string.
char *pure_engine_verse_xrefs_json(const struct PureEngine *engine, const char *ref_key);
// The suggested weaves (proposals under `home/weaves/suggested`) awaiting
// review, as JSON: `{"suggested":[{index,name,kind,notes,links:[…]}]}`. Each
// item's `index` is the ordinal within the suggested subset — the handle the
// approve/reject calls take. Caller-freed; null on a null engine.
//
// # Safety
// `engine` is a valid engine pointer.
char *pure_engine_suggested_weaves_json(const struct PureEngine *engine);
// Concept neighbours of a Strong's code as JSON:
// `{"code","near":[{code,score}],"cross":[{code,score}]}` (same-testament, then
// cross-testament — the latter empty unless the embedding is aligned). Null
// when no embedding is loaded or the args are invalid.
//
// # Safety
// `engine` is valid; `code` is a valid NUL-terminated UTF-8 string.
char *pure_engine_concept_neighbours_json(const struct PureEngine *engine,
                                          const char *code,
                                          uint32_t k);
// The fused OT↔NT bridge partners of a Strong's code as JSON:
// `{"code","partners":[{code,sources,prior}]}`, ranked by trust prior. The
// etymology layer works from the dictionary alone, so this is available even
// for a bytes-opened engine (external witnesses need a home). Null on a null
// engine / invalid code.
//
// # Safety
// `engine` is valid; `code` is a valid NUL-terminated UTF-8 string.
char *pure_engine_bridge_partners_json(const struct PureEngine *engine, const char *code);
// The morphology of one token as JSON:
// `{"verse","tokenIndex","code","gloss"}`. Null when no morphology is loaded,
// the reference is unparseable, or that token carries no annotation.
//
// # Safety
// `engine` is valid; `ref_key` is a valid NUL-terminated UTF-8 string.
char *pure_engine_morph_json(const struct PureEngine *engine,
                             const char *ref_key,
                             uint32_t token_index);
// "Verses like this one" (SIF) as JSON:
// `{"verse","in":[{verse,display,score}],"cross":[…]}`. The SIF model is built
// lazily on the first call (heavy) and cached. Null when no embedding is
// loaded or the reference is unparseable.
//
// # Safety
// `engine` is valid; `ref_key` is a valid NUL-terminated UTF-8 string.
char *pure_engine_similar_verses_json(const struct PureEngine *engine,
                                      const char *ref_key,
                                      uint32_t k);
// Add the whole verse `ref_key` to the thread named `name` (created on first
// use). `note` may be null; `added` is a caller-supplied UTC timestamp.
//
// # Safety
// `engine` is valid; the string args are null or valid NUL-terminated UTF-8.
char *pure_engine_thread_add(struct PureEngine *engine,
                             const char *name,
                             const char *ref_key,
                             const char *note,
                             const char *added);
// Add a target to the tag named `name` (created on first use). `kind` is
// `"verse"` (with `value` a ref key) or `"concept"` (with `value` a Strong's
// code). `note` may be null; `added` is a caller-supplied UTC timestamp.
//
// # Safety
// `engine` is valid; the string args are null or valid NUL-terminated UTF-8.
char *pure_engine_tag_add(struct PureEngine *engine,
                          const char *name,
                          const char *kind,
                          const char *value,
                          const char *note,
                          const char *added);
// Remove a target (see [`pure_engine_tag_add`] for `kind`/`value`) from the tag
// named `name`. A missing target is a no-op; a missing tag is an error.
//
// # Safety
// `engine` is valid; the string args are null or valid NUL-terminated UTF-8.
char *pure_engine_tag_remove(struct PureEngine *engine,
                             const char *name,
                             const char *kind,
                             const char *value);
// Weave the two whole verses `a_ref` / `b_ref` into the weave named `name`
// (created on first use). `added` is a caller-supplied UTC timestamp.
//
// # Safety
// `engine` is valid; the string args are null or valid NUL-terminated UTF-8.
char *pure_engine_weave_add_link(struct PureEngine *engine,
                                 const char *name,
                                 const char *a_ref,
                                 const char *b_ref,
                                 const char *added);
// **Approve** the `index`-th suggested weave: promote it into `home/weaves`
// with all links approved (merging into a same-named weave there if present)
// and remove the suggestion. `index` is the ordinal from
// `pure_engine_suggested_weaves_json`. Null on success, else an owned error.
//
// # Safety
// `engine` is a valid engine pointer.
char *pure_engine_weave_approve(struct PureEngine *engine, uint32_t index);
// **Reject** the `index`-th suggested weave: delete its file. `index` is the
// ordinal from `pure_engine_suggested_weaves_json`. Null on success, else an
// owned error.
//
// # Safety
// `engine` is a valid engine pointer.
char *pure_engine_weave_reject(struct PureEngine *engine, uint32_t index);
// Replace the running notes document of the thread named `name`. Null on
// success, else an owned error. The thread must already exist.
//
// # Safety
// `engine` is valid; the string args are null or valid NUL-terminated UTF-8.
char *pure_engine_thread_set_notes(struct PureEngine *engine, const char *name, const char *notes);