crates/ffi/bindings/csharp/PureStudyNative.g.cs


        /// <summary>
        ///  The rendering lens for a Strong's code: every distinct English rendering of
        ///  it, most frequent first, each with an occurrence count and its (capped)
        ///  verse refs + token spans. `{"code","renderings":[{"rendering","total",
        ///  "capped","refs":[{"verse","display","span":[start,end]}]}]}`. Each `refs`
        ///  list is capped at [`OCCURRENCE_CAP`]; `renderings` is empty for an untagged
        ///  or unknown code. Null only on a null engine. Caller-freed.
        ///
        ///  # Safety
        ///  `engine` is valid; `code` is a valid NUL-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_renderings_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_renderings_json(PureEngine* engine, byte* code);

        /// <summary>
        ///  The reverse lens: the Strong's codes a surface English word translates,
        ///  most frequent first. `{"word","codes":[{"code","count"}]}`. Reveals where
        ///  one English word hides a Greek/Hebrew distinction ("love" ← agape and
        ///  phileo); `codes` is empty for an untagged word. Null only on a null engine.
        ///  Caller-freed.
        ///
        ///  # Safety
        ///  `engine` is valid; `word` is a valid NUL-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_word_codes_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_word_codes_json(PureEngine* engine, byte* word);

        /// <summary>
        ///  Run a query through the multi-tier search and return a `SearchAnswer` JSON:
        ///  either `{"kind":"goto",...}` (the query was a reference) or
        ///  `{"kind":"hits","how","total","capped","hits":[...]}`. Null when the query is
        ///  blank or the engine is null. Caller-freed.
        ///
        ///  # Safety
        ///  `engine` is valid; `query` is a valid NUL-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_search_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_search_json(PureEngine* engine, byte* query);

        /// <summary>
        ///  The loaded threads as JSON: `{"threads":[{name,notes,created,entries:[…]}]}`.
        ///  Caller-freed; null on a null engine.
        ///
        ///  # Safety
        ///  `engine` is a valid engine pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_threads_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_threads_json(PureEngine* engine);

        /// <summary>
        ///  The loaded tags as JSON: `{"tags":[{name,color,created,members:[…]}]}`.
        ///  Caller-freed; null on a null engine.
        ///
        ///  # Safety
        ///  `engine` is a valid engine pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_tags_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_tags_json(PureEngine* engine);

        /// <summary>
        ///  A verse's weave cross-reference partners as JSON:
        ///  `{"verse","partners":[{"verse","display","weave"}]}`. Caller-freed; null on a
        ///  null engine or an unparseable reference.
        ///
        ///  # Safety
        ///  `engine` is valid; `ref_key` is a valid NUL-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_verse_xrefs_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_verse_xrefs_json(PureEngine* engine, byte* ref_key);

        /// <summary>
        ///  The suggested weaves (proposals under `home/weaves/suggested`) awaiting
        ///  review, as JSON: `{"suggested":[{index,name,kind,notes,links:[…]}]}`. Each
        ///  item's `index` is the ordinal within the suggested subset — the handle the
        ///  approve/reject calls take. Caller-freed; null on a null engine.
        ///
        ///  # Safety
        ///  `engine` is a valid engine pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_suggested_weaves_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_suggested_weaves_json(PureEngine* engine);

        /// <summary>
        ///  Concept neighbours of a Strong's code as JSON:
        ///  `{"code","near":[{code,score}],"cross":[{code,score}]}` (same-testament, then
        ///  cross-testament — the latter empty unless the embedding is aligned). Null
        ///  when no embedding is loaded or the args are invalid.
        ///
        ///  # Safety
        ///  `engine` is valid; `code` is a valid NUL-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_concept_neighbours_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_concept_neighbours_json(PureEngine* engine, byte* code, uint k);

        /// <summary>
        ///  The fused OT↔NT bridge partners of a Strong's code as JSON:
        ///  `{"code","partners":[{code,sources,prior}]}`, ranked by trust prior. The
        ///  etymology layer works from the dictionary alone, so this is available even
        ///  for a bytes-opened engine (external witnesses need a home). Null on a null
        ///  engine / invalid code.
        ///
        ///  # Safety
        ///  `engine` is valid; `code` is a valid NUL-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_bridge_partners_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_bridge_partners_json(PureEngine* engine, byte* code);

        /// <summary>
        ///  The morphology of one token as JSON:
        ///  `{"verse","tokenIndex","code","gloss"}`. Null when no morphology is loaded,
        ///  the reference is unparseable, or that token carries no annotation.
        ///
        ///  # Safety
        ///  `engine` is valid; `ref_key` is a valid NUL-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_morph_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_morph_json(PureEngine* engine, byte* ref_key, uint token_index);

        /// <summary>
        ///  "Verses like this one" (SIF) as JSON:
        ///  `{"verse","in":[{verse,display,score}],"cross":[…]}`. The SIF model is built
        ///  lazily on the first call (heavy) and cached. Null when no embedding is
        ///  loaded or the reference is unparseable.
        ///
        ///  # Safety
        ///  `engine` is valid; `ref_key` is a valid NUL-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_similar_verses_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_similar_verses_json(PureEngine* engine, byte* ref_key, uint k);

        /// <summary>
        ///  Add the whole verse `ref_key` to the thread named `name` (created on first
        ///  use). `note` may be null; `added` is a caller-supplied UTC timestamp.
        ///
        ///  # Safety
        ///  `engine` is valid; the string args are null or valid NUL-terminated UTF-8.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_thread_add", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_thread_add(PureEngine* engine, byte* name, byte* ref_key, byte* note, byte* added);

        /// <summary>
        ///  Add a target to the tag named `name` (created on first use). `kind` is
        ///  `"verse"` (with `value` a ref key) or `"concept"` (with `value` a Strong's
        ///  code). `note` may be null; `added` is a caller-supplied UTC timestamp.
        ///
        ///  # Safety
        ///  `engine` is valid; the string args are null or valid NUL-terminated UTF-8.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_tag_add", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_tag_add(PureEngine* engine, byte* name, byte* kind, byte* value, byte* note, byte* added);

        /// <summary>
        ///  Remove a target (see [`pure_engine_tag_add`] for `kind`/`value`) from the tag
        ///  named `name`. A missing target is a no-op; a missing tag is an error.
        ///
        ///  # Safety
        ///  `engine` is valid; the string args are null or valid NUL-terminated UTF-8.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_tag_remove", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_tag_remove(PureEngine* engine, byte* name, byte* kind, byte* value);

        /// <summary>
        ///  Weave the two whole verses `a_ref` / `b_ref` into the weave named `name`
        ///  (created on first use). `added` is a caller-supplied UTC timestamp.
        ///
        ///  # Safety
        ///  `engine` is valid; the string args are null or valid NUL-terminated UTF-8.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_weave_add_link", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_weave_add_link(PureEngine* engine, byte* name, byte* a_ref, byte* b_ref, byte* added);

        /// <summary>
        ///  **Approve** the `index`-th suggested weave: promote it into `home/weaves`
        ///  with all links approved (merging into a same-named weave there if present)
        ///  and remove the suggestion. `index` is the ordinal from
        ///  `pure_engine_suggested_weaves_json`. Null on success, else an owned error.
        ///
        ///  # Safety
        ///  `engine` is a valid engine pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_weave_approve", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_weave_approve(PureEngine* engine, uint index);

        /// <summary>
        ///  **Reject** the `index`-th suggested weave: delete its file. `index` is the
        ///  ordinal from `pure_engine_suggested_weaves_json`. Null on success, else an
        ///  owned error.
        ///
        ///  # Safety
        ///  `engine` is a valid engine pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_weave_reject", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_weave_reject(PureEngine* engine, uint index);

        /// <summary>
        ///  Replace the running notes document of the thread named `name`. Null on
        ///  success, else an owned error. The thread must already exist.
        ///
        ///  # Safety
        ///  `engine` is valid; the string args are null or valid NUL-terminated UTF-8.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_thread_set_notes", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_thread_set_notes(PureEngine* engine, byte* name, byte* notes);
